cut(1): implement the -n option (for use with -b)

This command had long advertised the existence of -n (in its usage
message and man page) but had never implemented it. Here we borrow the
implementation written by Tim J. Robbins for FreeBSD, which provides
most code changes and almost all documentation changes applied here. We
also borrow some options handling simplifications from OpenBSD, with
some minor tweaks to code and documentation by me.

Addresses PR bin/59029. This is a pretty obscure feature, it seems, so
it's unlikely it will be pulled up to stable branches.