usr.bin/cut/cut.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: cut.c,v 1.30 2025/02/19 17:34:14 gutteridge Exp $	*/
+/*	$NetBSD: cut.c,v 1.31 2025/03/04 03:54:19 gutteridge Exp $	*/
 
 /*
  * Copyright (c) 1989, 1993
@@ -42,7 +42,7 @@ __COPYRIGHT("@(#) Copyright (c) 1989, 1993\
 #if 0
 static char sccsid[] = "@(#)cut.c	8.3 (Berkeley) 5/4/95";
 #endif
-__RCSID("$NetBSD: cut.c,v 1.30 2025/02/19 17:34:14 gutteridge Exp $");
+__RCSID("$NetBSD: cut.c,v 1.31 2025/03/04 03:54:19 gutteridge Exp $");
 #endif /* not lint */
 
 #include <ctype.h>
@@ -63,9 +63,11 @@ static int	cflag;
 static char	dchar;
 static int	dflag;
 static int	fflag;
+static int	nflag;
 static int	sflag;
 
 static void	b_cut(FILE *, const char *);
+static void	b_n_cut(FILE *, const char *);
 static void	c_cut(FILE *, const char *);
 static void	f_cut(FILE *, const char *);
 static void	get_list(char *);
@@ -83,8 +85,6 @@ main(int argc, char *argv[])
 
 	dchar = '\t';			/* default delimiter is \t */
 
-	/* Since we don't support multi-byte characters, the -c and -b
-	   options are equivalent, and the -n option is meaningless. */
 	while ((ch = getopt(argc, argv, "b:c:d:f:sn")) != -1)
 		switch(ch) {
 		case 'b':
@@ -110,6 +110,7 @@ main(int argc, char *argv[])
 			sflag = 1;
 			break;
 		case 'n':
+			nflag = 1;
 			break;
 		case '?':
 		default:
@@ -118,13 +119,13 @@ main(int argc, char *argv[])
 	argc -= optind;
 	argv += optind;
 
-	if (fflag) {
-		if (cflag || bflag)
-			usage();
-	} else if ((!cflag && !bflag) || dflag || sflag)
+	if (bflag + cflag + fflag != 1 ||
+	    (nflag && !bflag) ||
+	    ((dflag || sflag) && !fflag))
 		usage();
-	else if (bflag && cflag)
-		usage();
+
+	if (nflag)
+		fcn = b_n_cut;
 
 	rval = 0;
 	if (*argv)
@@ -217,6 +218,72 @@ get_list(char *list)
 	/* set autostart */
 	if (autostart)
 		(void)memset(positions + 1, '1', autostart);
+}
+
+/*
+ * Cut based on byte positions, taking care not to split multibyte characters.
+ * Although this function also handles the case where -n is not specified,
+ * b_cut() ought to be much faster.
+ */
+static void
+b_n_cut(FILE *fp, const char *fname)
+{
+	size_t col, i, lbuflen;
+	char *lbuf;
+	int canwrite, clen, warned;
+	mbstate_t mbs;
+
+	memset(&mbs, 0, sizeof(mbs));
+	warned = 0;
+	while ((lbuf = fgetln(fp, &lbuflen)) != NULL) {
+		for (col = 0; lbuflen > 0; col += clen) {
+			if ((clen = mbrlen(lbuf, lbuflen, &mbs)) < 0) {
+				if (!warned) {
+					warn("%s", fname);
+					warned = 1;
+				}
+				memset(&mbs, 0, sizeof(mbs));
+				clen = 1;
+			}
+			if (clen == 0 || *lbuf == '\n')
+				break;
+			if (col < maxval && !positions[1 + col]) {
+				/*
+				 * Print the character if (1) after an initial
+				 * segment of un-selected bytes, the rest of
+				 * it is selected, and (2) the last byte is
+				 * selected.
+				 */
+				i = col;
+				while (i < col + clen && i < maxval &&
+				    !positions[1 + i])
+					i++;
+				canwrite = i < col + clen;
+				for (; i < col + clen && i < maxval; i++)
+					canwrite &= positions[1 + i];
+				if (canwrite)
+					fwrite(lbuf, 1, clen, stdout);
+			} else {
+				/*
+				 * Print the character if all of it has
+				 * been selected.
+				 */
+				canwrite = 1;
+				for (i = col; i < col + clen; i++)
+					if ((i >= maxval && !autostop) ||
+					    (i < maxval && !positions[1 + i])) {
+						canwrite = 0;
+						break;
+					}
+				if (canwrite)
+					fwrite(lbuf, 1, clen, stdout);
+			}
+			lbuf += clen;
+			lbuflen -= clen;
+		}
+		if (lbuflen > 0)
+			putchar('\n');
+	}
 }
 
 static void
